--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ authors = ["Jérôme Mahuet <jerome.mahuet@gmail.com>"]
 [dependencies]
 image = "0.10.3"
 clap = {version = "2", features = ["unstable"]}
+clippy = {version = "*", optional = true}
+
+[features]
+default = []
